--- a/main/src/main/res/navigation/mobile_navigation.xml
+++ b/main/src/main/res/navigation/mobile_navigation.xml
@@ -2,15 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_category">
+    app:startDestination="@+id/category_graph">
 
 
-    <fragment
-        android:id="@+id/navigation_category"
-        android:name="ru.mvrlrd.featurecategory.CategoryFragment"
-        android:label="CategoryFragment"
-        tools:layout="@layout/fragment_category"/>
+    <include app:graph="@navigation/categories_graph"/>
+
 
     <fragment
         android:id="@+id/navigation_dashboard"
