--- a/featurecategory/src/main/res/layout/fragment_category.xml
+++ b/featurecategory/src/main/res/layout/fragment_category.xml
@@ -3,14 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.CategoryFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".presentation.CategoryFragment"
+    >
+<!--    android:background="#778da9"-->
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:paddingTop="16dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="CATEGORIES"
-        android:textColor="@color/white"
-        android:background="@color/black"/>
+        tools:listitem="@layout/item_category"/>
 
 </FrameLayout>
