--- a/featurecategory/src/main/res/layout/fragment_category.xml
+++ b/featurecategory/src/main/res/layout/fragment_category.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.CategoryFragment"
-    >
+    android:padding="10dp">
 <!--    android:background="#778da9"-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
-        android:paddingTop="16dp"
         android:clipToPadding="false"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
