--- a/featurecategory/src/main/res/layout/item_category.xml
+++ b/featurecategory/src/main/res/layout/item_category.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="@dimen/card_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="@color/white"
-    app:cardCornerRadius="15dp"
-    android:elevation="12dp"
+    app:cardCornerRadius="@dimen/card_corner_radius"
+    android:elevation="@dimen/category_card_elevation"
     android:clickable="true"
-    android:layout_marginBottom="10dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="@dimen/space_between_cards"
    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,10 +19,10 @@
             android:id="@+id/tv_category_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="@dimen/category_title_margin_start"
+            android:layout_marginTop="@dimen/category_title_margin_top"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="@dimen/category_title_text_size"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="movies"
@@ -32,8 +30,8 @@
 
         <ImageView
             android:id="@+id/iv_category_image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/category_icon_size"
+            android:layout_height="@dimen/category_icon_size"
             android:src="@drawable/bag_svgrepo_com400"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
