--- a/featurecategory/src/main/res/layout/item_category.xml
+++ b/featurecategory/src/main/res/layout/item_category.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/category_title_margin_start"
             android:layout_marginTop="@dimen/category_title_margin_top"
-            android:textColor="@color/black"
+            android:textColor="#ffb703"
             android:textSize="@dimen/category_title_text_size"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
