--- a/modules/feature/add_category/src/main/res/layout/item_icon.xml
+++ b/modules/feature/add_category/src/main/res/layout/item_icon.xml
@@ -14,6 +14,7 @@
         android:layout_height="70dp"
         app:civ_border_width="1dp"
         app:civ_border_color="#FF000000"
+        android:background="@drawable/item_icon_selector"
         />
 
 </FrameLayout>
